--- a/index.html
+++ b/index.html
@@ -129,9 +129,8 @@
           <div  class="col-md-6">
             <div class="p-5">
               <h2 class="display-4">La où Le ?</h2>
-              <p><br> Application web  ? <br>
-                est un service de vérification automatique développé par Med Ali Adweni
-            </div>
+              <p><br> Application web   <br>
+Utilisé pour corriger les fautes de grammaire (La , Le)  ; Référence du site : Dictionnaire  Larouuse              </div>
           </div>
         </div>
       </div>
@@ -152,7 +151,7 @@
             <div class="p-5">
               <h2 class="display-4">Contactez moi!</h2>
               <p> <h2> <i class="fa fa-facebook"></i>  <a href="https://www.facebook.com/mouhamedali.adweni.9/">Mohamed Ali Adweni</a> </h2> </p>
-			  <p> <h2> <i class="fa fa-envelope"></i>  <a href="mailto:mouhamedaliadoinii@gmail.com">mouhamedaliadoinii@gmail.com </a> </h2> </p>
+			  <p> <h2> <i class="fa fa-envelope"></i>  <a href="mailto:mouhamedaliadoinii@gmail.com">mouhamedaliadoi<br>nii@gmail.com </a> </h2> </p>
             </div>
           </div>
         </div>
